Closed
Bug 1875656
Opened 10 months ago
Closed 9 months ago
Crash in [@ mozilla::layers::CanvasTranslator::AddBuffer]
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
RESOLVED
FIXED
124 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox122 | --- | wontfix |
firefox123 | --- | fixed |
firefox124 | --- | fixed |
People
(Reporter: aosmond, Assigned: bobowen)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/5ed22276-fa01-4126-8bfa-328cc0240121
MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(mHeader->readerState == State::Paused)
Top 10 frames of crashing thread:
0 xul.dll mozilla::layers::CanvasTranslator::AddBuffer gfx/layers/ipc/CanvasTranslator.cpp:234
1 xul.dll mozilla::detail::RunnableMethodArguments<mozilla::UniquePtr<void*, mozilla::detail::FileHandleDeleter>&&, unsigned long long>::apply<mozilla::layers::CanvasTranslator, void const xpcom/threads/nsThreadUtils.h:1213
1 xul.dll std::invoke /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/type_traits:1534
1 xul.dll std::_Apply_impl /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/tuple:974
1 xul.dll std::apply /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/tuple:979
1 xul.dll mozilla::detail::RunnableMethodArguments<mozilla::UniquePtr<void*, mozilla::detail::FileHandleDeleter>&&, unsigned long long>::apply xpcom/threads/nsThreadUtils.h:1162
1 xul.dll mozilla::detail::RunnableMethodImpl<mozilla::layers::CanvasTranslator*, void xpcom/threads/nsThreadUtils.h:1213
2 xul.dll mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:257
3 xul.dll nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:341
4 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1193
Assignee | ||
Updated•9 months ago
|
Assignee: nobody → bobowencode
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•9 months ago
|
||
Assignee | ||
Comment 2•9 months ago
|
||
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/a553790df1c7
Make CanvasTranslator::AddBuffer diagnostic assert instead of release. r=aosmond,gfx-reviewers
Comment 4•9 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 9 months ago
status-firefox124:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
Updated•9 months ago
|
status-firefox122:
--- → wontfix
status-firefox123:
--- → affected
status-firefox-esr115:
--- → unaffected
Comment 5•9 months ago
|
||
The patch landed in nightly and beta is affected.
:bobowen, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox123
towontfix
.
For more information, please visit BugBot documentation.
Flags: needinfo?(bobowencode)
Assignee | ||
Comment 6•9 months ago
|
||
Comment on attachment 9375766 [details]
Bug 1875656: Make CanvasTranslator::AddBuffer diagnostic assert instead of release. r=#gfx-reviewers,aosmond
Beta/Release Uplift Approval Request
- User impact if declined: Crash will continue in late beta and release. It's a low level crash, but it is often a browser crash for non-windows.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple change of a release assert to a log and diagnostic assert.
- String changes made/needed: None
- Is Android affected?: Yes
Flags: needinfo?(bobowencode)
Attachment #9375766 -
Flags: approval-mozilla-beta?
Comment 7•9 months ago
|
||
Comment on attachment 9375766 [details]
Bug 1875656: Make CanvasTranslator::AddBuffer diagnostic assert instead of release. r=#gfx-reviewers,aosmond
Approved for 123 beta 4, thanks.
Attachment #9375766 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•9 months ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•