Bug 1875656: Make CanvasTranslator::AddBuffer diagnostic assert instead of release. r=aosmond,gfx-reviewers a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D199222